chg to using new .edn-driven config for boot-gae

--- a/gae/resources/public/index.html
+++ b/gae/resources/public/index.html
@@ -16,7 +16,7 @@
       <p>
 	Test the servlet:
 	<ul>
-	  <li><a href="/greetings">/greetings</a></li>
+	  <li><a href="/hello/bob">/hello/bob</a></li>
 	</ul>
       </p>
 
